# basic-mcp

./: .env.example  README.md  main.py  pyproject.toml
prompts/: server_instructions.md
utils/: auth.py
